--- a/PSP.desktop
+++ b/PSP.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Type=Application
 Terminal=false
 Icon[en_US]=/home/moetrixs/Game/PPSSPP/assets/icon_regular_72.png
-Name[en_US]=PSP Emulator
+Name[en_US]=PPSSPP
 Comment[en_US]=Start PSP emulator
 Exec=/home/moetrixs/Game/PPSSPP/PPSSPPSDL
 Name=PPSSPP
